--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 sycamore = "0.8"
-rcas = { git = "https://github.com/nw-rs/rcas" }
+citrus-cas = { git = "https://github.com/nw-rs/citrus-cas" }
+wee_alloc = "0.4.5"
 
 [profile.release]
 opt-level = "z"
